--- a/msvc/wizard/ChangeLog
+++ b/msvc/wizard/ChangeLog
@@ -1,3 +1,6 @@
-Mar 21, 2001
- - added OMNeT++ wizard to the repository
------- omnetpp-2.1 released ------
+
+2001-03-21  Andras Varga
+
+	* ------ omnetpp-2.1 released ------
+
+	* added OMNeT++ wizard to the repository
