--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,429 +1,773 @@
-#24  Apr 9, 1997
-  The first usable, reasonably bug-free version.
-  To complete:
-     - implement 'Save inspector list'
-     - finish cMsg inspector
-     - histogram/outvector inspector: draw axes, labelling etc.
-  To do in the future:
-     - options dialog (breakpoints enabled/disabled etc)
-     - filtered message window
-     - restart must be done decently
-     - implement concrete inspectors
-     - fast run
-#24a Apr 10, 1997
-  - 'Save inspector list' done
-#25  Apr 10, 1997
-  - omnetpp.tcl split to 5 smaller scripts
-#25c Apr 10, 1997
-  - cMsg inspector quasi finished
-#25d Apr 10, 1997
-  - cStatistic inspector added
-#26 Apr 11, 1997
-  - cMsg inspector writeBack written; "From"/"To" buttons still missing
-  - cPar inspector added
-  - cMod inspector added; not implemented yet
-#26c Apr 12, 1997
-  - opp_histogramwindow_cell, opp_outvectorinspector_value,
-    opp_outvectorinspector_config commands implemented. Not compiled yet.
-    The script part is to be done.
-#28 Apr 17, 1997
-  - Histogram, outvector windows are finished
-  - cSimpleMod inspector done
-  - to do: brush up TCompoundModInspector & TContainerInspector
-           check FDDI bug!!!
-#28a Apr 17, 1997
-  - CHK() macro added to every Tcl_Eval(), Tcl_VarEval(), Tcl_EvalFile()
-#29 Apr 17, 1997
-  - bugs with inspector creation were fixed
-  - new TO DO list:
-     - check FDDI bug!!!
-     - filtered message window
-     - 'Express Run' option
-     - restart must be done decently
-     - options dialog (breakpoints enabled/disabled etc)
-     - implement breakpoints
-     - cCompundMod graphical inspector
-     - add [Tkenv]/tkenv-lib-path= option to ini file
-        (or) possibility to hardwire scripts into lib
-#30 Apr 22, 1997
-  Bugfixes:
-     - THistogramWindow: missing cell #0 bug fixed
-     - TOutvectInspector: unmatched drawing and labelling bug fixed
-     - cSimpleMod's container inspector bug fixed
-  opp_inspectorcommand implemented. This means that any inspector can be
-     implemented in the future without touching existing Tkenv code!
-  New ToDo's:
-     - print event number, time in sec, next module info into main window
-#31 Jun 23, 1997
-  - commented out XSynchronize(...) and Tk_SetWindowBackground(...) lines
-    from tklib.cc which caused problems on Win95/NT
-  - added TKENV_LIBPATH environment var to specify the location of Tkenv
-    script files if they are not in ~/omnetpp/envir/tkenv
-  - added View menu
-  - make histogram and output vector windows respond to resize events
-#32 Jun 25, 1997
-  - menu building code in main.tcl reorganized, making it easier to
-    rearrange menus
-  - menus reorganized
-  - 'inspect differently' bar changed to ordinary button
-  - simple toolbar added
-#33 Jun 25, 1997
-  - added 'event number' and 'next module' displays to status bar
-  - added opt_verbose_sim and opt_module_msgs options
-  - using main window like cmdenv output
-  - NOT COMPLETE:
-      'simulation options' dialog
-      opp_getsimoption/setsimoption commands
-      printing of event banners
-#34 Jun 26, 1997
-  - 'simulation options' dialog, opp_getsimoption/setsimoption commands completed
-  - prints event banners in main window (if turned on)
-#35 Jun 26, 1997
-  - improved on cMsg inspector
-#36 Jun 27, 1997
-  - hardwired font definitions collected to create_font_bindings (main.tcl)
-    and thus they are a lot easier to customise
-#37 Jun 27, 1997
-  - Express run added, Fast Run, Animate changed (compatibity: envir92 or up)
-  - the following ini file options were added (with default values):
+2001-03-27  Andras Varga
+
+	* ------ omnetpp-2.1 released ------
+
+	* Makefile.vc change: replaced $(TKENV_EMBED_SUFFIX) with $(TKENV_EMBED_TCL).
+
+2001-03-10  Andras Varga
+
+	* bugfix: setDisplayString() crashed Tkenv after the network
+	graphics window was closed [reported by Stefan Geisler]
+
+	* Borland C++ support removed: I deleted the project files
+	(*.ide). I added equivalent Makefile.bc files (generated from the
+	BC IDE), but they are completely unsupported at the moment. If
+	there's interest, it's possible that later I'll add makefiles for
+	the free command-line bc5.5 compiler.
+
+2001-02-06  Andras Varga
+
+	* ------ omnetpp-2.0p1 released ------
+
+	* ------ omnetpp-2.0 released ------
+
+	* make clean didn't delete tclcode.cc
+
+2001-01-21  Andras Varga
+
+	* "find" and "find next" functionality improved and now it works
+	for all module output windows. Hotkeys: Ctrl-F Find, F3 or Ctrl-N
+	Find next.
+
+	* added hotkeys for step, run, etc commands: F4 Step, F5 Run, F6
+	Fast Run, F7 Express Run, F8 Stop, Ctrl-F4 Step within module
+
+2001-01-16  Andras Varga
+
+	* fix: added Tcl_FindExecutable(argv[0]) to Tcl initialization
+	code (needed by Cygwin 1.1)
+
+2001-01-15  Andras Varga
+
+	* new feature: debug output window (for ev<< messages) can now be
+	opened for compound modules too: it accumulates messages from all
+	submodules.
+	[suggested by Ulrich Kaage]
+
+	* single-stepping within a module is now possible for compound
+	modules too
+
+	* revised single-stepping within a module: now execution stops
+	both *before* and *after* events in that module, and events in
+	that module are done with "normal execution" (animation, etc),
+	while intervening events are done with "fast execution" (rare
+	inspector updates, animation disabled)
+
+2001-01-13  Andras Varga
+
+	* added performance status bar (simsec/sec, events/sec, events/simsec gauges)
+
+2001-01-03  Andras Varga
+
+	* added 2nd status bar (containing: number of messages in the FES,
+	total number of messages created, number of currently existing
+	message objects)
+
+2000-09-29  Andras Varga
+
+	* fixed a bug which caused Tkenv NOT to report an error when the
+	'p' display string tag's 3rd arg (layout) was invalid
+
+	* the 'p' display string tag's 3rd arg (layout) can now be
+	abbreviated: r=row, c=col=column, m=matrix, i=ri=ring
+
+	* added new layout to 'p' tag: exact (abbreviation: e or x); this
+	lets one position modules in a module vector one by one
+
+	* submodule display strings may use the parent module's parameters
+	too
+
+2000-08-07  Andras Varga
+
+	* makefile changes for RPM support
+
+2000-07-26  Andras Varga
+
+	* fixed a bug which caused Tcl error when using ev<< or
+	ev.printf() with a string than contained curly braces [reported by
+	Nick van Foreest]
+
+	* added Edit|Find... to main menu.
+
+2000-07-17 Andras Varga
+
+	* fixed bug in splitInspectorName()  [reported by Ulrich Kaage]
+
+2000-06-02  Andras Varga
+
+	* ------ omnetpp-2.0b5 released ------
+	
+	* minor fix in tkcmd.cc [reported by Richard Lyon]
+
+2000-05-21  Andras Varga
+
+	* ------ omnetpp-2.0b4 released ------
+	
+	* bugfix: 'Options|Load inspector list' now works again (you must
+	re-generate your existing inspect.lst files)
+
+2000-05-10  Andras Varga
+
+	* [Tkenv]/extra-stack= option added, it specifies (in bytes) how
+	much extra stack each activity() module needs when executing under
+	Tkenv. This used to be hardcoded (16384), now users can fine-tune
+	it. [suggested by Niko]
+
+2000-05-07  Andras Varga
+
+	* Makefile.vc improvements [from Balazs Kelemen]
+
+	* tk_PatchLevel check corrected (complained about Tk 8.0.5)
+	[reported by Ulrich Kaage]
+
+2000-05-05  Andras Varga
+
+	* implemented module parameter substitution in display strings
+	(like "p=$x_pos,$y_pos"). Substitution still not supported in
+	connection display strings.
+
+	* setDisplayString() now takes effect during simulation
+	execution. Tkenv also handles the new 'immediate' argument to
+	setDisplayString().  Annoyance: setDisplayString() also does a
+	'Rearrange randomly placed submodules'. This is not so trivial to
+	change (module positions will need to be explicitly stored)...
+
+2000-04-13  Andras Varga
+
+	* code for Express Run (runSimulationNoTracing()) modified so that
+	it prints module output (ev<<...) for the finish() functions
+	[suggested by Niko]
+
+2000-04-10  Andras Varga
+
+	* TRUE/FALSE (defines) replaced by true/false (C++ keywords)
+
+	* in printf() statements, all "%lf","%lg","%le" was replaced by
+	"%f","%g","%e" (eliminated a lot of gcc -Wall warnings)
+
+2000-04-10  Andras Varga (4-10)
+
+	* dynamic registration of user interface (TOmnetApp) classes
+	introduced: Register_OmnetApp() macro added to tkapp.cc
+
+	* changes to enable linking a Windows DLL from the library
+
+	* adjustments because of TOmnetApp constructor changes
+
+	* added tkenvDummy()/envirDummy(): functions which can/should be
+	called from Envir in order to force the linker to include the
+	Tkenv library into the executable. (These functions do absolutely
+	nothing.)
+
+2000-03-26  Andras Varga
+
+	* 'char *' pointers made const-correct (lots of 'char *' -->
+	'const char *' replacements throughout the code)
+
+2000-01-17  Andras Varga (17-18)
+
+	* ------ omnetpp-2.0b3 released ------
+	
+	* bugfix in OmnetTkApp::objectDeleted() (tkapp.cc)
+
+	* edited error msgs in tkapp.cc
+
+	* font settins updated for Tk8.2/Win in main.tcl
+
+	* in dialogs.tcl, added back the grab for the STOP dialog of
+	Express Run mode. (Those lines got commented out long ago for some
+	reason...) Under win32, the app menu is still accessible despite
+	the grab (Tk bug?).
+
+2000-01-15  Andras Varga
+
+	* OmnetTkApp::setup() reorganized
+
+2000-01-09  Andras Varga
+
+	* small modification to TOmnetTkApp's constructor
+
+1999-12-05  Andras Varga
+
+	* Makefile.vc added
+
+	* prints a banner line into main window before calling finish() on
+	modules TBD: should print it into per-module windows too
+
+1999-12-04  Andras Varga
+
+	* compiled with MSVC. Minor changes: changed int to bool in some
+	places.  tkenv.dsp added. NOTE: one has to rename all .cc files to
+	.cpp for compiling (ren *.cc *.cpp)!
+
+1999-10-12  Andras Varga
+
+	* bugfix in balloon.tcl
+
+1999-09-05  Andras Varga
+
+	* ------ omnetpp-2.0b2 released ------
+	
+	* main window renamed from ".omnetpp" to "."; now modal dialogs
+	cannot go behind the main window (including the big red "STOP!" 
+	dialog).
+
+1999-08-30  Andras Varga
+
+	* bugfix on the toolbar of graphical gate inspector
+
+1999-08-13  Andras Varga
+
+	* default width of connection arrows changed from 2 to 1 pixels to
+	be consistent with GNED
+
+1999-08-07 Andras Varga
+
+	* "inspect network", "inspect FES" buttons added to main toolbar
+
+1999-08-02  Andras Varga
+
+	* OMNETPP_BITMAP_PATH turned into real path (a list of
+	directories). The separator char is ";" on Windows, and ":" or ";"
+	on Unix.
+
+1999-07-17  Andras Varga
+
+	* modinsp2.tcl: fixed bug in animdelay calibration
+
+	* fixed a bug with inspector type selection in Inspect|By pattern
+	matching..
+
+1999-07-11  Andras Varga
+
+	* icons.tcl added; textual toolbar icons replaced with graphics icons
+
+	* note: because the name of each inspector window is unique, the
+	help_tips() array grows monotonously as one opens new and new
+	inspector windows. The array is NOT cleaned up after closing an
+	insp.  window. In everyday use this small memory leak cannot be a
+	problem.
+
+	* TO DO: spaces to be added between icons
+
+	* widgets.tcl edited --> copy it to other subdirs
+1999-07-10  Andras Varga
+
+	* arrow.cc updated from GNED (enhancement: default value of
+	anchors are now 50%)
+
+	* widgets.tcl updated from GNED
+
+	* modinsp2.tcl: removed potential sources of division by zero
+
+	* fixed a problem in printptr() [tklib.cc] which caused a crash on
+	Sun
+
+	* now demands at least Tcl/Tk 8.0 patchlevel 1
+
+1999-06-21  Andras Varga	
+
+	* all sources checked in under CVS
+
+	* makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
+
+	* version.log renamed to ChangeLog
+
+	* tcl2c.c moved to util/
+1999-02-07  Andras Varga
+
+	* stable version
+
+1999-02-07  Andras Varga
+
+	* fixed bug in outvector-window (caused div by zero)
+
+	* cMessage and cPacket inspector redesigned
+
+	* fixed minor bug with anim speed settings
+
+1999-01-25  Andras Varga
+
+	* inspector factories added
+
+	* updated for sim172b
+
+	* plugin support: automatically loads .tcl and .so files placed in the
+	tkenv/plugins directory. Intended use: inspectors for custom classes.
+
+1998-12-27  Andras Varga
+
+	* updated for sim170
+
+	* cPacket inspector added
+
+	* setType() moved to tklib.h/.cc for easy reuse
+
+	* makefile renamed to makefile.in
+
+	* stack usage statistics added to simple module inspector
+
+	*  runningModule() corrected to contextModule()
+
+
+1998-08-23  Andras Varga
+
+        * small fixes; widgets.tcl updated
+
+1998-08-17  Andras Varga
+
+        * dialog centering and focus problems fixed (or alleviated) on Windows
+
+        * icon loading improved
+
+1998-08-14  Andras Varga
+
+        * bugfixes
+
+1998-08-13  Andras Varga
+
+        * support for compiled-in TCL code added.  See the makefile for
+	more info and to turn it on/off.  Here's how it works: tcl2c.c
+	generates tclcode.cc from the .tcl files.  tclcode.cc is in turn
+	included into tkapp.cc. tkapp.cc includes tclcode.cc and uses
+	compiled-in TCL code if OMNETPP_TKENV_DIR is undefined at
+	compile-time.
+
+1998-08-12  Andras Varga
+
+        * Borland C++ 5.0 project file added (tkenv.ide)
+
+        * fixes necessary to run Tkenv on Windows
+
+1998-07-24  Andras Varga
+
+        * arrow.cc changed; display string for connections changed (see Manual)
+
+        * small fixes
+
+1998-07-15  Andras Varga
+
+        * small fixes
+
+        * small improvements on gate inspector
+
+1998-07-11  Andras Varga
+
+        * small improvements on gate inspector
+
+1998-07-10  Andras Varga
+
+        * module inspectors rewritten in notebook-style
+
+        * graphical gate inspector (path inspector) added (cannot do animation yet)
+
+        * [Tkenv]/default-run= option added
+
+        * cWatch inspector added
+
+        * Simulation|Restart changed to Rebuild (restart cannot be done properly)
+
+        * several smaller improvements
+
+1998-07-03  Andras Varga
+
+        * added right click support
+
+        * outvector time-range autoconfig
+
+        * browsing can go on while simulation is executing
+
+        * run until event number
+
+        * animation speed ([Tkenv]/animation-speed=0..3)
+
+1998-07-01  Andras Varga
+
+        * Simulate|finish simulation run and |start all modules added
+
+1998-06-26  Andras Varga
+
+        * bugfixes; cMessage and cGate inspector improved
+
+1998-06-25  Andras Varga
+
+        * callFinish() incorporated
+
+        * msg insp fixed
+
+        * othes fixes
+
+1998-06-17  Andras Varga
+
+        * message names and message kind coloring during animation
+
+        * new ini file options:
+	    [Tkenv]/animation-msgnames= 0/1
+            animation-msgcolors= 0/1
+
+1998-06-11  Andras Varga
+
+        * made compatible with sim162 (gate vector stuff)
+
+        * small fix on output vector window tcl code
+
+1998-06-09  Andras Varga
+
+        * made compatible with sim162
+
+        * removed 'container' inspector type from many classes
+
+1998-06-05  Andras Varga
+
+        * two small but annoying bugs fixed
+
+        * made compatible with sim160
+
+1998-05-18  Andras Varga
+
+        * made compatible with sim160
+
+1998-05-12  Andras Varga
+
+        * makefile updated; timer calibration for animation; icon support;
+    small fixes
+
+1998-04-28  Andras Varga
+
+        * scrollbars added to graphical module inspector
+
+        * name field added to message inspector
+
+        * misc improvements and bugfixes
+
+1998-04-24  Andras Varga
+
+        * makefile can now create shared object (libtkenv.so)
+
+        * stuff from TOmnetTkApp's constructor move to its setup() function
+
+1998-04-24  Andras Varga
+
+	NEW FEATURE: graphical module inspectors and animation
+	  Modules are now displayed graphically. Submodules can be drawn as
+	  color rectangles, ovals or icons. (Icons are stored in the new bitmaps/
+	  directory.)
+	  Placement, arrangement and appearance of submodules is controlled by
+	  the modules' display strings, associated with the setDisplayString(),
+	  displayString() members of cModule and cGate. If you use the new
+	  'display:' phrases of the NED language, the corresponding
+	  setDisplayString() calls will be automatically placed into the
+	  nedc-compiled code. Read doc/dispstr.txt on how to write display strings.
+	  Modules that don't have display strings are placed automatically.
+	  Animation of message flow has also been added.
+	New ini file options:
+	  [Tkenv]/animation-enabled= 0/1
+	Some of the Tcl code cleaned up.
+	Changes:
+
+          * TKENV_LIBPATH environment variable renamed to OMNETPP_TKENV_DIR.
+
+          * A new environment variable OMNETPP_BITMAP_DIR added.
+
+	Requires sim156.
+	TO DO:
+
+          * implement reference to module parameters in display strings
+
+          * graphical cGate inspector, showing whole path
+
+          * graphical cQueue inspector
+
+1998-04-15  Andras Varga (15-24)
+
+        * work versions, not released
+
+1998-03-26  Andras Varga
+
+        * "Inspect As" button only offers really existing inspector types as choice
+
+        * container inspectors redesigned to make it more intuitive to use
+
+1998-03-19  Andras Varga
+
+        * user interface beautifying, updating for Tk8.0
+
+1998-02-15  Andras Varga
+
+        * makefile changed; tkenv.a-->libtkenv.a
+
+1997-12-13  Andras Varga
+
+        * upgraded to sim151
+
+        * use file dialogs of Tk4.2 - requires Tcl7.6/Tk4.2 from now on
+
+        * some Tk beautifying (correct wrong packing parameters etc)
+
+1997-10-06  Andras Varga
+
+        * further renaming; compatible with sim148
+
+1997-10-02  Andras Varga
+
+        * cleaned up & renamed several member functions; compatible with sim147
+
+1997-08-17  Andras Varga
+
+        * updated for sim146a
+	       cMsgHeap inspector added
+	       extrastack() stuff added
+
+	Still To Do:
+
+           - "step over initialization messages"
+
+           - cGate graphical inspector: should show the route
+
+           - filtered message window
+
+           - restart must be done decently: destroy+rebuild
+
+           - implement breakpoints
+
+           - cCompoundMod graphical inspector
+
+           - outvector graphical inspector: add possibility to set base time
+
+           - implement "run until event #243"
+
+           - objects should know what inspector types can be created for
+	   them.  This can be done in the inspector(int type, void *data)
+	   function: if type==QUERY_TYPES then it should put list of
+	   possible types to memory pointed to by `data' ptr.
+
+1997-08-07  Andras Varga
+
+        * cNetSimpleMod corrected to cNetMod
+
+        * compatibility: sim144a or up
+
+1997-07-10  Andras Varga
+
+        * makefile hacked to make it work with Cygnus gcc
+
+        * 'darkblue' changed to 'blue' because Tk on Win95 didn't recognize it
+
+        * default value of TKENV_LIBPATH changed and different for WinNT and Unices
+
+        * known bugs on Win95/NT: some scrollbars are missing (??)
+
+1997-07-06  Andras Varga
+
+        * small fixes and improvements on #43
+
+1997-07-01  Andras Varga
+
+        * bug fixes and improvements on #42
+
+        * gate inspector changed; "AsObject" and "AsGraph" icons added to
+	many inspectors
+
+1997-07-01  Andras Varga
+
+        * small fixes on #41
+
+1997-07-01  Andras Varga
+
+        * ini file entries renamed:
+          verbose-simulation --> print-banners
+          module-messages --> use-mainwindow
+
+        * some inspectors modified to use toolbars
+
+1997-07-01  Andras Varga
+
+        * some bugs in #39 fixed
+
+        * now prints event banners in module windows
+
+        * "Inspect differently" button changed to "Inspect As.." on
+	inspector toolbar
+
+        * added single stepping within a module
+
+1997-06-27  Andras Varga
+
+        * idea that modal dialogs should stay on top isn't good: what if
+	there are two modal windows??
+
+        * cMsg, cPar inspector enhanced
+
+        * View|Snapshot file etc. won't open window if file doesn't exist
+
+1997-06-27  Andras Varga
+
+        * 'Run until' dialog done; still to do: run until #(event number)
+
+1997-06-27  Andras Varga
+
+        * Express run added, Fast Run, Animate changed (compatibity: envir92 or up)
+
+        * the following ini file options were added (with default values):
           animation-delay = 100
           update-freq-fast = 10
           update-freq-express = 1000
           breakpoints-enabled = TRUE
           verbose-simulation = TRUE
           module-messages = TRUE
-#38 Jun 27, 1997
-  - 'Run until' dialog done; still to do: run until #(event number)
-#39 Jun 27, 1997
-  - idea that modal dialogs should stay on top isn't good: what if there
-    are two modal windows??
-  - cMsg, cPar inspector enhanced
-  - View|Snapshot file etc. won't open window if file doesn't exist
-#40 July 1, 1997
-  - some bugs in #39 fixed
-  - now prints event banners in module windows
-  - "Inspect differently" button changed to "Inspect As.." on inspector
-    toolbar
-  - added single stepping within a module
-#41 July 1, 1997
-  - ini file entries renamed:
-          verbose-simulation --> print-banners
-          module-messages --> use-mainwindow
-  - some inspectors modified to use toolbars
-#42 July 1, 1997
-  - small fixes on #41
-#43 July 1, 1997
-  - bug fixes and improvements on #42
-  - gate inspector changed; "AsObject" and "AsGraph" icons added to many
-    inspectors
-#44 July 6, 1997
-  - small fixes and improvements on #43
-#45 July 10, 1997
-  - makefile hacked to make it work with Cygnus gcc
-  - 'darkblue' changed to 'blue' because Tk on Win95 didn't recognize it
-  - default value of TKENV_LIBPATH changed and different for WinNT and Unices
-  - known bugs on Win95/NT: some scrollbars are missing (??)
-#46 Aug 7, 1997
-  - cNetSimpleMod corrected to cNetMod
-  - compatibility: sim144a or up
-#47 Aug 17, 1997
-  - updated for sim146a
-       cMsgHeap inspector added
-       extrastack() stuff added
-  Still To Do:
-     - "step over initialization messages"
-     - cGate graphical inspector: should show the route
-     - filtered message window
-     - restart must be done decently: destroy+rebuild
-     - implement breakpoints
-     - cCompoundMod graphical inspector
-     - outvector graphical inspector: add possibility to set base time
-     - implement "run until event #243"
-     - objects should know what inspector types can be created for them.
-       This can be done in the  inspector(int type, void *data) function:
-       if type==QUERY_TYPES then it should put list of possible types
-       to memory pointed to by `data' ptr.
-#48 Oct 2, 1997
-  - cleaned up & renamed several member functions; compatible with sim147
-#49 Oct 6, 1997
-  - further renaming; compatible with sim148
-#50 Dec 13, 1997
-  - upgraded to sim151
-  - use file dialogs of Tk4.2 - requires Tcl7.6/Tk4.2 from now on
-  - some Tk beautifying (correct wrong packing parameters etc)
-#51 Feb 15, 1998
-  - makefile changed; tkenv.a-->libtkenv.a
-#52 March 19, 1998
-  - user interface beautifying, updating for Tk8.0
-#53 March 26, 1998
-  - "Inspect As" button only offers really existing inspector types as choice
-  - container inspectors redesigned to make it more intuitive to use
-#54a-j April 15-24, 1998
-  - work versions, not released
-#55 April 24, 1998
-  NEW FEATURE: graphical module inspectors and animation
-    Modules are now displayed graphically. Submodules can be drawn as
-    color rectangles, ovals or icons. (Icons are stored in the new bitmaps/
-    directory.)
-    Placement, arrangement and appearance of submodules is controlled by
-    the modules' display strings, associated with the setDisplayString(),
-    displayString() members of cModule and cGate. If you use the new
-    'display:' phrases of the NED language, the corresponding
-    setDisplayString() calls will be automatically placed into the
-    nedc-compiled code. Read doc/dispstr.txt on how to write display strings.
-    Modules that don't have display strings are placed automatically.
-    Animation of message flow has also been added.
-  New ini file options:
-    [Tkenv]/animation-enabled= 0/1
-  Some of the Tcl code cleaned up.
-  Changes:
-    - TKENV_LIBPATH environment variable renamed to OMNETPP_TKENV_DIR.
-    - A new environment variable OMNETPP_BITMAP_DIR added.
-  Requires sim156.
-  TO DO:
-    - implement reference to module parameters in display strings
-    - graphical cGate inspector, showing whole path
-    - graphical cQueue inspector
-#56 April 24, 1998
-  - makefile can now create shared object (libtkenv.so)
-  - stuff from TOmnetTkApp's constructor move to its setup() function
-#57 April 28, 1998
-  - scrollbars added to graphical module inspector
-  - name field added to message inspector
-  - misc improvements and bugfixes
-#58 May 12, 1998
-  - makefile updated; timer calibration for animation; icon support;
-    small fixes
-#59 May 18, 1998
-  - made compatible with sim160
-#60 June 5, 1998
-  - two small but annoying bugs fixed
-  - made compatible with sim160
-#61 June 9, 1998
-  - made compatible with sim162
-  - removed 'container' inspector type from many classes
-#62 June 11, 1998
-  - made compatible with sim162 (gate vector stuff)
-  - small fix on output vector window tcl code
-#63 June 17, 1998
-  - message names and message kind coloring during animation
-  - new ini file options:
-    [Tkenv]/animation-msgnames= 0/1
-            animation-msgcolors= 0/1
-#64 June 25, 1998
-  - callFinish() incorporated
-  - msg insp fixed
-  - othes fixes
-#65 June 26, 1998
-  - bugfixes; cMessage and cGate inspector improved
-#66 July 1, 1998
-  - Simulate|finish simulation run and |start all modules added
-#67 July 3, 1998
-  - added right click support
-  - outvector time-range autoconfig
-  - browsing can go on while simulation is executing
-  - run until event number
-  - animation speed ([Tkenv]/animation-speed=0..3)
-#68 July 10, 1998
-  - module inspectors rewritten in notebook-style
-  - graphical gate inspector (path inspector) added (cannot do animation yet)
-  - [Tkenv]/default-run= option added
-  - cWatch inspector added
-  - Simulation|Restart changed to Rebuild (restart cannot be done properly)
-  - several smaller improvements
-#69 July 11, 1998
-  - small improvements on gate inspector
-#70 July 15, 1998
-  - small fixes
-  - small improvements on gate inspector
-#71 July 24, 1998
-  - arrow.cc changed; display string for connections changed (see Manual)
-  - small fixes
-#72 August 12, 1998
-  - Borland C++ 5.0 project file added (tkenv.ide)
-  - fixes necessary to run Tkenv on Windows
-#73 August 13, 1998
-  - support for compiled-in TCL code added.
-    See the makefile for more info and to turn it on/off.
-    Here's how it works: tcl2c.c generates tclcode.cc from  the .tcl files.
-    tclcode.cc is in turn included into tkapp.cc. tkapp.cc includes tclcode.cc
-    and uses compiled-in TCL code if OMNETPP_TKENV_DIR is undefined at
-    compile-time.
-#74 August 14, 1998
-  - bugfixes
-#74a August 17, 1998
-  - dialog centering and focus problems fixed (or alleviated) on Windows
-  - icon loading improved
-#74b August 23, 1998
-  - small fixes; widgets.tcl updated
-#75 Dec 27, 1998
-  - updated for sim170
-  - cPacket inspector added
-  - setType() moved to tklib.h/.cc for easy reuse
-  - makefile renamed to makefile.in
-  - stack usage statistics added to simple module inspector
-  - runningModule() corrected to contextModule()
-#76a-c Jan 25, 1999
-  - inspector factories added
-  - updated for sim172b
-  - plugin support: automatically loads .tcl and .so files placed in the
-    tkenv/plugins directory. Intended use: inspectors for custom classes.
-#77a Feb 7, 1999
-  - fixed bug in outvector-window (caused div by zero)
-  - cMessage and cPacket inspector redesigned
-  - fixed minor bug with anim speed settings
-#78 Feb 7, 1999
-  - stable version
-#79 June 21, 1999
-  - all sources checked in under CVS
-  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
-  - version.log renamed to ChangeLog
-  - tcl2c.c moved to util/
-July 10, 1999
-  - arrow.cc updated from GNED (enhancement: default value of anchors are now 50%)
-  - widgets.tcl updated from GNED
-  - modinsp2.tcl: removed potential sources of division by zero
-  - fixed a problem in printptr() [tklib.cc] which caused a crash on Sun
-  - now demands at least Tcl/Tk 8.0 patchlevel 1
-July 11-13, 1999
-  - icons.tcl added; textual toolbar icons replaced with graphics icons
-  - note: because the name of each inspector window is unique,
-    the help_tips() array grows monotonously as one opens new and new
-    inspector windows. The array is NOT cleaned up after closing an insp.
-    window. In everyday use this small memory leak cannot be a problem.
-  - TO DO: spaces to be added between icons
-  - widgets.tcl edited --> copy it to other subdirs
-July 17, 1999
-  - modinsp2.tcl: fixed bug in animdelay calibration
-  - fixed a bug with inspector type selection in Inspect|By pattern matching..
-Aug 2, 1999
-  - OMNETPP_BITMAP_PATH turned into real path (a list of directories). The
-    separator char is ";" on Windows, and ":" or ";" on Unix.
-Aug 7, 1999
-  - "inspect network", "inspect FES" buttons added to main toolbar
-Aug 13, 1999
-  - default width of connection arrows changed from 2 to 1 pixels to be
-    consistent with GNED
-Aug 30, 1999
-  - bugfix on the toolbar of graphical gate inspector
-Sept 5, 1999
-  - main window renamed from ".omnetpp" to "."; now modal dialogs cannot go
-    behind the main window (including the big red "STOP!" dialog).
------- omnetpp-2.0b2 released ------
-Oct 12, 1999
-  - bugfix in balloon.tcl
-Dec 4,1999
-  - compiled with MSVC. Minor changes: changed int to bool in some places.
-    tkenv.dsp added. NOTE: one has to rename all .cc files  to .cpp
-    for compiling (ren *.cc *.cpp)!
-Dec 5,1999
-  - Makefile.vc added
-  - prints a banner line into main window before calling finish() on modules
-    TBD: should print it into per-module windows too
-Jan 9,2000
-  - small modification to TOmnetTkApp's constructor
-Jan 15,2000
-  - OmnetTkApp::setup() reorganized
-Jan 17-18,2000
-  - bugfix in OmnetTkApp::objectDeleted() (tkapp.cc)
-  - edited error msgs in tkapp.cc
-  - font settins updated for Tk8.2/Win in main.tcl
-  - in dialogs.tcl, added back the grab for the STOP dialog of Express Run mode.
-    (Those lines got commented out long ago for some reason...) Under win32,
-    the app menu is still accessible despite the grab (Tk bug?).
------- omnetpp-2.0b3 released ------
-Mar 26, 2000
- - 'char *' pointers made const-correct (lots of 'char *' --> 'const char *'
-   replacements throughout the code)
-April 4-10, 2000
- - dynamic registration of user interface (TOmnetApp) classes introduced:
-   Register_OmnetApp() macro added to tkapp.cc
- - changes to enable linking a Windows DLL from the library
- - adjustments because of TOmnetApp constructor changes
- - added tkenvDummy()/envirDummy(): functions which can/should be called from
-   Envir in order to force the linker to include the Tkenv library into the
-   executable. (These functions do absolutely nothing.)
-Apr 10, 2000
- - TRUE/FALSE (defines) replaced by true/false (C++ keywords)
- - in printf() statements, all "%lf","%lg","%le" was replaced by "%f","%g","%e"
-   (eliminated a lot of gcc -Wall warnings)
-Apr 13, 2000
- - code for Express Run (runSimulationNoTracing()) modified so that it prints
-   module output (ev<<...) for the finish() functions [suggested by Niko]
-May 5, 2000
- - implemented module parameter substitution in display strings (like
-   "p=$x_pos,$y_pos"). Substitution still not supported in connection display
-   strings.
- - setDisplayString() now takes effect during simulation execution. Tkenv also
-   handles the new 'immediate' argument to setDisplayString().
-   Annoyance: setDisplayString() also does a 'Rearrange randomly placed
-   submodules'. This is not so trivial to change (module positions will need
-   to be explicitly stored)...
-May 7, 2000
- - Makefile.vc improvements [from Balazs Kelemen]
- - tk_PatchLevel check corrected (complained about Tk 8.0.5) [reported by
-   Ulrich Kaage]
-May 10, 2000
- - [Tkenv]/extra-stack= option added, it specifies (in bytes) how much extra
-   stack each activity() module needs when executing under Tkenv. This used to
-   be hardcoded (16384), now users can fine-tune it. [suggested by Niko]
-May 21, 2000
- - bugfix: 'Options|Load inspector list' now works again (you must re-generate
-   your existing inspect.lst files)
------- omnetpp-2.0b4 released ------
-Jun 2, 2000
- - minor fix in tkcmd.cc [reported by Richard Lyon]
------- omnetpp-2.0b5 released ------
-July 17, 2000
- - fixed bug in splitInspectorName()  [reported by Ulrich Kaage]
-July 26, 2000
- - fixed a bug which caused Tcl error when using ev<< or ev.printf() with
-   a string than contained curly braces [reported by Nick van Foreest]
- - added Edit|Find... to main menu.
-Aug 7, 2000
- - makefile changes for RPM support
-Sep 29, 2000
- - fixed a bug which caused Tkenv NOT to report an error when the 'p' display
-   string tag's 3rd arg (layout) was invalid
- - the 'p' display string tag's 3rd arg (layout) can now be abbreviated:
-   r=row, c=col=column, m=matrix, i=ri=ring
- - added new layout to 'p' tag: exact (abbreviation: e or x); this lets
-   one position modules in a module vector one by one
- - submodule display strings may use the parent module's parameters too
-Jan 3, 2001
- - added 2nd status bar (containing: number of messages in the FES, total
-   number of messages created, number of currently existing message objects)
-Jan 13, 2001
- - added performance status bar (simsec/sec, events/sec, events/simsec gauges)
-Jan 15, 2001
- - new feature: debug output window (for ev<< messages) can now be opened
-   for compound modules too: it accumulates messages from all submodules.
-   [suggested by Ulrich Kaage]
- - single-stepping within a module is now possible for compound modules too
- - revised single-stepping within a module: now execution stops both
-   *before* and *after* events in that module, and events in that module are
-   done with "normal execution" (animation, etc), while intervening events are
-   done with "fast execution" (rare inspector updates, animation disabled)
-Jan 16, 2001
- - fix: added Tcl_FindExecutable(argv[0]) to Tcl initialization code (needed by
-   Cygwin 1.1)
-Jan 21, 2001
- - "find" and "find next" functionality improved and now it works for all
-   module output windows. Hotkeys: Ctrl-F Find, F3 or Ctrl-N Find next.
- - added hotkeys for step, run, etc commands:
-     F4 Step, F5 Run, F6 Fast Run, F7 Express Run, F8 Stop, Ctrl-F4 Step within
-     module
-Feb 6, 2001
- - make clean didn't delete tclcode.cc
------- omnetpp-2.0 released ------
------- omnetpp-2.0p1 released ------
-Mar 10, 2001
- - bugfix: setDisplayString() crashed Tkenv after the network graphics window
-   was closed [reported by Stefan Geisler]
- - Borland C++ support removed: I deleted the project files (*.ide). I added
-   equivalent Makefile.bc files (generated from the BC IDE), but they are
-   completely unsupported at the moment. If there's interest, it's possible
-   that later I'll add makefiles for the free command-line bc5.5 compiler.
-Mar 27, 2001
- - Makefile.vc change: replaced $(TKENV_EMBED_SUFFIX) with $(TKENV_EMBED_TCL).
------- omnetpp-2.1 released ------
+
+1997-06-27  Andras Varga
+
+        * hardwired font definitions collected to create_font_bindings
+	(main.tcl) and thus they are a lot easier to customise
+
+1997-06-26  Andras Varga
+
+        * improved on cMsg inspector
+
+1997-06-26  Andras Varga
+
+        * 'simulation options' dialog, opp_getsimoption/setsimoption commands completed
+
+        * prints event banners in main window (if turned on)
+
+1997-06-25  Andras Varga
+
+        * added 'event number' and 'next module' displays to status bar
+
+        * added opt_verbose_sim and opt_module_msgs options
+
+        * using main window like cmdenv output
+
+        * NOT COMPLETE:
+	      'simulation options' dialog
+	      opp_getsimoption/setsimoption commands
+	      printing of event banners
+
+1997-06-25  Andras Varga
+
+        * menu building code in main.tcl reorganized, making it easier to
+	rearrange menus
+
+        * menus reorganized
+
+        * 'inspect differently' bar changed to ordinary button
+
+        * simple toolbar added
+
+1997-06-23  Andras Varga
+
+        * commented out XSynchronize(...) and Tk_SetWindowBackground(...) 
+	lines from tklib.cc which caused problems on Win95/NT
+
+        * added TKENV_LIBPATH environment var to specify the location of
+	Tkenv script files if they are not in ~/omnetpp/envir/tkenv
+
+        * added View menu
+
+        * make histogram and output vector windows respond to resize events
+
+1997-04-22  Andras Varga
+
+        Bugfixes:
+
+           - THistogramWindow: missing cell #0 bug fixed
+
+           - TOutvectInspector: unmatched drawing and labelling bug fixed
+
+           - cSimpleMod's container inspector bug fixed
+	   opp_inspectorcommand implemented. This means that any inspector
+	   can be implemented in the future without touching existing
+	   Tkenv code!  New ToDo's:
+
+           - print event number, time in sec, next module info into main window
+
+1997-04-17  Andras Varga
+
+        * bugs with inspector creation were fixed
+
+        * new TO DO list:
+
+           - check FDDI bug!!!
+
+           - filtered message window
+
+           - 'Express Run' option
+
+           - restart must be done decently
+
+           - options dialog (breakpoints enabled/disabled etc)
+
+           - implement breakpoints
+
+           - cCompundMod graphical inspector
+
+           - add [Tkenv]/tkenv-lib-path= option to ini file
+	        (or) possibility to hardwire scripts into lib
+
+1997-04-17  Andras Varga
+
+        * CHK() macro added to every Tcl_Eval(), Tcl_VarEval(), Tcl_EvalFile()
+
+1997-04-17  Andras Varga
+
+        * Histogram, outvector windows are finished
+
+        * cSimpleMod inspector done
+
+        * to do: brush up TCompoundModInspector & TContainerInspector
+	check FDDI bug!!!
+
+1997-04-12  Andras Varga
+
+        * opp_histogramwindow_cell, opp_outvectorinspector_value,
+	opp_outvectorinspector_config commands implemented. Not compiled
+	yet.  The script part is to be done.
+
+1997-04-11  Andras Varga
+
+        * cMsg inspector writeBack written; "From"/"To" buttons still missing
+
+        * cPar inspector added
+
+        * cMod inspector added; not implemented yet
+
+1997-04-10  Andras Varga
+
+        * cStatistic inspector added
+
+1997-04-10  Andras Varga
+
+        * cMsg inspector quasi finished
+
+1997-04-10  Andras Varga
+
+        * omnetpp.tcl split to 5 smaller scripts
+
+1997-04-10  Andras Varga
+
+        * 'Save inspector list' done
+
+1997-04-09  Andras Varga
+
+        The first usable, reasonably bug-free version.
+	To complete:
+
+           - implement 'Save inspector list'
+
+           - finish cMsg inspector
+
+           - histogram/outvector inspector: draw axes, labelling etc.
+
+	To do in the future:
+
+           - options dialog (breakpoints enabled/disabled etc)
+
+           - filtered message window
+
+           - restart must be done decently
+
+           - implement concrete inspectors
+
+           - fast run
+
