--- a/samples/hcube/ChangeLog
+++ b/samples/hcube/ChangeLog
@@ -1,17 +1,34 @@
-Oct 10, 1999
- - standardized indentation of source files
- - HC prefix added to Generator and Sink modules
-Jan 18, 2000
- - added explicit cast to math expressions with cPar...
------- omnetpp-2.0b3 released ------
------- omnetpp-2.0b4 released ------
------- omnetpp-2.0b5 released ------
------- omnetpp-2.0 released ------
------- omnetpp-2.0p1 released ------
-Mar 10, 2001
- - Borland C++ project file (*.ide) removed, Makefile.bc added (unsupported!)
- - MSVC makefiles and project files now contain the OMNeT++ include and lib
-   directories with absolute paths (previously they were relative paths,
-   like ..\..\lib). This means the samples will compile even when they're moved
-   to another location in the file system.
------- omnetpp-2.1 released ------
+
+2000-01-18  Andras Varga
+
+	* ------ omnetpp-2.0p1 released ------
+
+	* ------ omnetpp-2.0 released ------
+
+	* ------ omnetpp-2.0b5 released ------
+
+	* ------ omnetpp-2.0b4 released ------
+
+	* ------ omnetpp-2.0b3 released ------
+
+	* added explicit cast to math expressions with cPar...
+
+2001-03-10  Andras Varga
+
+	* ------ omnetpp-2.1 released ------
+
+	* MSVC makefiles and project files now contain the OMNeT++ include
+	and lib directories with absolute paths (previously they were
+	relative paths, like ..\..\lib). This means the samples will
+	compile even when they're moved to another location in the file
+	system.
+	
+	* Borland C++ project file (*.ide) removed, Makefile.bc added
+	(unsupported!)
+
+
+1999-10-10  Andras Varga
+
+	* HC prefix added to Generator and Sink modules
+
+	* standardized indentation of source files
