--- a/samples/hist/ChangeLog
+++ b/samples/hist/ChangeLog
@@ -1,17 +1,33 @@
-Oct 10, 1999
- - standardized indentation of source files
------- omnetpp-2.0b3 released ------
-May 21, 2000
- - removed reference to TVEnv
- - inspect.lst fixed (see Tkenv's Options|Load inspector list menu item)
------- omnetpp-2.0b4 released ------
------- omnetpp-2.0b5 released ------
------- omnetpp-2.0 released ------
------- omnetpp-2.0p1 released ------
-Mar 10, 2001
- - Borland C++ project file (*.ide) removed, Makefile.bc added (unsupported!)
- - MSVC makefiles and project files now contain the OMNeT++ include and lib
-   directories with absolute paths (previously they were relative paths,
-   like ..\..\lib). This means the samples will compile even when they're moved
-   to another location in the file system.
------- omnetpp-2.1 released ------
+
+2000-03-21  Andras Varga
+
+	* ------ omnetpp-2.0p1 released ------
+
+	* ------ omnetpp-2.0 released ------
+
+	* ------ omnetpp-2.0b5 released ------
+
+	* ------ omnetpp-2.0b4 released ------
+
+	* inspect.lst fixed (see Tkenv's Options|Load inspector list menu item)
+
+	* removed reference to TVEnv
+
+2001-03-10  Andras Varga
+
+	* ------ omnetpp-2.1 released ------
+
+	* MSVC makefiles and project files now contain the OMNeT++ include
+	and lib directories with absolute paths (previously they were
+	relative paths, like ..\..\lib). This means the samples will
+	compile even when they're moved to another location in the file
+	system.
+
+	* Borland C++ project file (*.ide) removed, Makefile.bc added (unsupported!)
+
+
+1999-10-10  Andras Varga
+
+	* ------ omnetpp-2.0b3 released ------
+
+	* standardized indentation of source files
