--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,268 +1,490 @@
-#72  Dec 1, 1996
-   - fixed linker problem (undefined symbol `TSlaveApp::TSlaveApp(...)'
-   - changed copyright message
-#79  Feb 28, 1997
-  - adopted to sim105 & 'multiple runs' bug fixed
-  - ini file warning changed from ev.printfmsg() to ev.printf()
-#80  Mar 6, 1997
-  - new cInifile members: getAs..2()
-  - better ini file warnings
-  - gen1_seed=, gen2_seed= etc entries added; not complete
-#81  Mar 6, 1997
-  - gen1_seed=, gen2_seed= etc entries finished;
-  - starting_seeds table added
-  - TOmnetApp::setOptions() renamed to makeOptionsEffective()
-#82  Mar 8, 1997
-#83  Mar 10, 1997
-  - small modifications
-#84  Mar 15, 1997
-  - pvm stuff (cSlaveApp) modified
-#85  Mar 16, 1997
-  - Style of ini file [Machines] section changed from:
-      whale.hit.bme.hu = node1, node2
-      dolphin.hit.bme.hu = node3
-    to:
-      node1 = whale.hit.bme.hu
-      node2 = whale.hit.bme.hu
-      node3 = dolphin.hit.bme.hu
-#86  Mar 21, 1997
-  - changes on PVM stuff. *** COMPATIBLE WITH SIM122 OR UP ***
-     '-s' flag replaced with call to is_started_as_master()
-     more error checks
-  - copyright msg modified
-#87  Mar 24, 1997
-  - file logging added to TSlaveApp ("slaveapp.log")
-  - bugfixes
-#87a Apr 1, 1997
-  - fmt of ini file warnings changed
-#88 Apr 6, 1997
-  - cEnvir::messagedelivered() added
-  - STARTUPERROR_MODE stuff added
-  - compatible with: sim127
-#89 Apr 11, 1997
-  - opt_helponly stuff (-h command-line option) moved to cmdenv package
-#90 Apr 22, 1997
-  - stepmode renamed to pause_in_sendmsg (compatibility: sim130 and above)
-#91 Jun 26, 1997
-  - enable_modmsgs flag added. If set to FALSE, makes ev.printf() and
-    ev.puts() return immediately without doing anything.
-    Motivation was to decrease overhead when running the simulation
-    at full speed and module messages are not needed.
-#92 Jun 27, 1997
-  - enable_modmsgs changed to disable_tracing
-  - main stack enlarged from 16K to 32K (cenvir.cc)
-#93 Jul 1, 1997
-  - printing tons of "genXX-seed=..." ini warnings suppressed
-  - handling of boolean ini file entries improved
-#94 Jul 6, 1997
-  - fixed a bug that caused segmentation fault if there was an error during
-    system setup
-#95 Jul 10, 1997
-  - makefile hacked upon to make it edible for Cygnus gcc
-#96 Jul 20, 1997
-  Ini file reader improved; '#' as well as ';' can be used for comments
-  Improvements on distributed execution:
-  - ini file options added to enable logging of messages produced by slaves:
-       [Slaves]
-       write-slavelog = true/false
-       slavelog-file = slave.log
-    Output between TSlaveApp creation and ini file processing is written in
-    the file "slave.log".
-  - changed TOmnetApp::foreignputs()
-#97 Jul 31, 1997
-  - a bug introduced in #96 fixed
-  - [General]/number-of-runs= ini file setting was removed; its place is
-    taken by [Cmdenv]/runs-to-execute=
-  - added: cInifileSectionIterator
-  - compatible with: cmdenv87 and up
-#98 Aug 4, 1997
-  - fixed a bug with reporting how many rnd gens were initialized from table
-  - [Slaves]/module-messages= flag added; works similarly to Cmdenv's.
-    Default value is NO: module messages from slaves do not appear on console.
-#99 Aug 7, 1997
-  - omnetapp.cc: cNetSimpleMod corrected to cNetMod
-  - compatibility: sim144a or later
-#100 Aug 8, 1997
-  - other [Slaves] options added that control whether different kinds of
-    textual messages should be routed to the console:
-       errmsgs-to-console=
-       infomsgs-to-console=
-       modmsgs-to-console=
-  - updated for sim144c
-#101 Aug 17, 1997
-  - TOTAL_STACK increased to 2Mb
-  - extrastack() support added
-  - new ini file entry: [General]/netif-check-freq=  (default:1)
-  - compatibility: sim146a
-#102 Aug 17, 1997
-  - small bug in ini file reader fixed
-  - readPerRunOptions(1) in TOmnetApp::setup() commented out
-#103 Oct 2, 1997
-  - cleaned up & renamed several member functions; compatible with sim147
-#104 Oct 6, 1997
-  - further renaming; compatible with sim148
-#105 Oct 10, 1997
-  - added endl to cenvir.h. Example: ev << "Hello!" << endl;
-#106 Dec 13, 1997
-  - for clarity, section name [All runs] changed to [Parameters]
-#107 Feb 15, 1998
-  - makefile made compatible with configure script; envir.a-->libenvir.a
-#108 March 26, 1998
-  - use of gets() eliminated
-#109 April 27, 1998
-  - new ini file option: [General] / total-stack-kb=
-    Holds the total stack size (in KB) needed by module coroutines.
-  - makefile can now create shared object (libenvir.so)
-  - support for dynamic loading of libraries: -l command line option.
-    `foo -l ./token.so' (if `foo' is an OMNeT++ executable) will now
-    load the token.so file at startup.
-#110 May 11, 1998
-  - multiple -f and -l options: several ini files and libraries can be loaded
-    (If you want to do several simulation runs with their parameters
-     in separate files, multiple -f will be very useful!)
-  - ini files can include each other. Syntax:
-      ...
-      include second.ini
-      ...
-  - wildcard parameters in ini files. Like:
-      [Parameters]
-      net.station[*].gen_rate=100
-    Wildcard characters are: * ?, and {} for range (using the conventional
-    [] would be very inconvenient because they would interfere with vector
-    indices).
-#111 May 12, 1998
-  - bugfixes
-#112 May 20, 1998
-  - `ev << ..' conversions for doubles changed
-#113 June 9, 1998
-  - new ini file option: output-scalar-file= (in [General] or [Run-nn] section)
-    (supported from sim162 up)
-#114 June 18, 1998
-  - opt_inifile_name bug fixed
-#115 June 19,1998
-  - call to simulation.setup() added to TOmnetApp.setup()
-#116 June 24,1998
-  - modifications to cinifile.cc
-  - return value of TOmnetApp::askYesNo changed from bool to int (-1==cancel)
-  - other small fixes
-#117 July 10, 1998
-  - main stack size increased to 64K
-  - new ini file option: [General]/load-libs=
-#118 July 15, 1998
-  - small fixes
-#119 July 20, 1998
-  Improved cIniFile: wildcards understood in keys; keys may contain whitespace
-  Support for output vector configuration from ini file
-  - getOutVectorConfig() added to cEnvir and TOmnetApp classes
-  - output vector config is taken from [OutVectors] or [Run nn] section.
-    Syntax:
-      module.vectorname.enabled=yes/no
-      module.vectorname.interval=10s..30s
-    Output vectors are enabled by default.
-#120 July 24, 1998
-  - getDisplayString() added to cEnvir and TOmnetApp classes
-  - display strings now can be taken from [DisplayStrings] or [Run nn]
-    section of the ini file (hardcoded display strings take precendence
-    over the ones in the ini file)
-  - cIniFile edited -- getRaw() added
-#121 August 12, 1998
-  - Borland C++ 5.0 project file added
-  - cenvir.h move to sim/
-  - small fixes
-#122 August 14, 1998
-  - makefile fix
-#123 August 17, 1998
-  - fixed a bug with output vector config
-#123 August 17, 1998
-  - fixed a bug with output vector config
-#124 Dec 27, 1998
-  - fixed bug in inifile reader
-  - DYNAMIC_LINKAGE config flag renamed to USE_DLOPEN
-  - makefile renamed to makefile.in
-  - runningModule() corrected to contextModule in slaveapp.cc
-#125 Jan 25, 1999
-  - updated for sim172d
-#126 Feb 9, 1999
-  - updated for sim174
-#127 June 21, 1999
-  - all sources checked in under CVS
-  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
-  - version.log renamed to ChangeLog
-  - removed support for DOS with BC3.1
-Aug 13, 1999
-  - cIniFile::readFile()'s include file handling modified. Now the included
-    file doesn't need to start with a section header line: entries will use
-    the current section header in the including file.
-    BUT: section headers in the included file are not propagated back to the
-    including file because it could lead to nasty behaviour.
-Aug 30, 1999
-  - Fixed a bug in omnetapp.cc which caused bogus reporting in the number
-    of random number generators initialized from table and from ini file
------- omnetpp-2.0b released ------
-Sept 20, 1999
- - typo fixed in Makefile.in: $(CLFAGS) --> $(CFLAGS)
------- omnetpp-2.0b2 released ------
-Dec 4, 1999
-  - first compile with MSVC. Minor changes: changed int to bool in some places
-Dec 5, 1999
-  - Makefile.vc added
-Jan 9, 2000
-  - bugfix: TOmnetApp's destructor made virtual
-Jan 15, 2000
-  - MSDOS #defines removed from the code (omnetapp.cc)
-Jan 16, 2000
-  - improvements in cinifile.cc
-Jan 28, 2000
- -  main stack size increased to 128K (omnetapp.cc)
------- omnetpp-2.0b3 released ------
-Mar 26, 2000
- - 'char *' pointers made const-correct (lots of 'char *' --> 'const char *'
-   replacements throughout the code)
-April 4, 2000
- - dynamic registration of user interface (TOmnetApp) classes introduced.
-   (The formerly used method didn't make it possible to create separate DLLs
-   on Windows: envir.dll, tkenv.dll, cmdenv.dll).
-   See appreg.h, the Register_OmnetApp macros in cmdenv.cc and tkapp.cc,
-   and the chooseBestOmnetApp() function in envir.cc.
-April 6-10, 2000
- - changes to enable linking a Windows DLL from the library
- - the memoryIsLow() utility function was placed into this library, and now
-   it works through a new TOmnetApp::memoryIsLow() function.
- - the "-u <user-interface>" command-line parameter is now understood by envir:
-   this can be used to select the user interface if both Cmnenv and Tkenv is
-   linked in (or is dynamically loaded).
-   The [General]/user-interface= ini file option was also added, with the same
-   functionality.
-   This allows the user to link the simulation without Cmdenv and Tkenv, and
-   load one of them at runtime, with a line like this in omnetpp.ini:
-       [General]
-       load-libs=../../lib/tkenv.so
-       user-interface=Tkenv
-   Or the command-line equivalent:
-       mysim  -l ../../lib/tkenv.so  -u Tkenv
-   To allow all the above, the setup procedure (cEnvir::setup()) and
-   the constructor and the setup() function of TOmnetApp was reorganized.
-Apr 10, 2000
- - TRUE/FALSE (defines) replaced by true/false (C++ keywords)
- - in printf() statements, all "%lf","%lg","%le" was replaced by "%f","%g","%e"
-May 7, 2000
- - Makefile.vc improvements from Balazs Kelemen
------- omnetpp-2.0b4 released ------
------- omnetpp-2.0b5 released ------
-June 19, 2000
- - bugfix: TOmnetApp::getOutVectorConfig() crashed when it was called with
-   vecname being NULL (on Solaris; other systems seem to tolerate NULL
-   being passed to sprintf() as a "%s" argument) [reported by Ulrich Kaage]
-Jan 16, 2001
- - added Speedometer class
-Feb 6, 2001
- - added dllexport to Speedometer
------- omnetpp-2.0 released ------
-Feb 27, 2001
- - patch to prevent Unix linkers (falsely) report Speedometer as missing symbol
------- omnetpp-2.0p1 released ------
- - Borland C++ support removed: I deleted the project files (*.ide). I added
-   equivalent Makefile.bc files (generated from the BC IDE), but they are
-   completely unsupported at the moment. If there's interest, it's possible
-   that later I'll add makefiles for the free command-line bc5.5 compiler.
------- omnetpp-2.1 released ------
+2001-02-27  Andras Varga
+
+	* ------ omnetpp-2.1 released ------
+
+	* Borland C++ support removed: I deleted the project files
+	(*.ide). I added equivalent Makefile.bc files (generated from the
+	BC IDE), but they are completely unsupported at the moment. If
+	there's interest, it's possible that later I'll add makefiles for
+	the free command-line bc5.5 compiler.
+
+	* ------ omnetpp-2.0p1 released ------
+
+	* patch to prevent Unix linkers (falsely) report Speedometer as
+	missing symbol
+
+
+2001-02-06  Andras Varga
+
+	* ------ omnetpp-2.0 released ------
+	
+	* added dllexport to Speedometer
+
+2001-01-16  Andras Varga
+
+	* added Speedometer class
+
+2000-06-19  Andras Varga
+
+	* bugfix: TOmnetApp::getOutVectorConfig() crashed when it was
+	called with vecname being NULL (on Solaris; other systems seem to
+	tolerate NULL being passed to sprintf() as a "%s" argument)
+	[reported by Ulrich Kaage]
+
+2000-05-07  Andras Varga
+
+	* ------ omnetpp-2.0b5 released ------
+
+	* ------ omnetpp-2.0b4 released ------
+	
+	* Makefile.vc improvements from Balazs Kelemen
+
+2000-04-10  Andras Varga
+
+	* TRUE/FALSE (defines) replaced by true/false (C++ keywords)
+
+	* in printf() statements, all "%lf","%lg","%le" was replaced by
+	"%f","%g","%e"
+
+2000-04-10  Andras Varga (6-10)
+
+	* changes to enable linking a Windows DLL from the library
+
+	* the memoryIsLow() utility function was placed into this library,
+	and now it works through a new TOmnetApp::memoryIsLow() function.
+
+	* the "-u <user-interface>" command-line parameter is now
+	understood by envir: this can be used to select the user interface
+	if both Cmnenv and Tkenv is linked in (or is dynamically loaded).
+
+	The [General]/user-interface= ini file option was also added, with
+	the same functionality.
+
+	This allows the user to link the simulation without Cmdenv and
+	Tkenv, and load one of them at runtime, with a line like this in
+	omnetpp.ini:
+
+		[General]
+	         load-libs=../../lib/tkenv.so
+	         user-interface=Tkenv
+        Or the command-line equivalent:
+
+		mysim  -l ../../lib/tkenv.so  -u Tkenv
+
+	To allow all the above, the setup procedure (cEnvir::setup()) and
+	the constructor and the setup() function of TOmnetApp was
+	reorganized.
+
+2000-04-04  Andras Varga
+
+	* dynamic registration of user interface (TOmnetApp) classes
+	introduced.
+	(The formerly used method didn't make it possible to create
+	separate DLLs on Windows: envir.dll, tkenv.dll, cmdenv.dll).
+
+	See appreg.h, the Register_OmnetApp macros in cmdenv.cc and
+	tkapp.cc, and the chooseBestOmnetApp() function in envir.cc.
+
+2000-03-26  Andras Varga
+
+	* 'char *' pointers made const-correct (lots of 'char *' -->
+	'const char *' replacements throughout the code)
+
+2000-01-28  Andras Varga
+
+	* ------ omnetpp-2.0b3 released ------
+
+	* main stack size increased to 128K (omnetapp.cc)
+
+2000-01-16  Andras Varga
+
+        * improvements in cinifile.cc
+
+2000-01-15  Andras Varga
+
+        * MSDOS #defines removed from the code (omnetapp.cc)
+
+2000-01-09  Andras Varga
+
+        * bugfix: TOmnetApp's destructor made virtual
+
+1999-12-05  Andras Varga
+
+        * Makefile.vc added
+
+1999-12-04  Andras Varga
+
+        * first compile with MSVC. Minor changes: changed int to bool in
+	some places
+
+1999-09-20  Andras Varga
+
+	* ------ omnetpp-2.0b2 released ------
+
+	* typo fixed in Makefile.in: $(CLFAGS) --> $(CFLAGS)
+
+1999-08-30  Andras Varga
+
+	* ------ omnetpp-2.0b released ------
+
+        * Fixed a bug in omnetapp.cc which caused bogus reporting in the
+	number of random number generators initialized from table and from
+	ini file
+
+1999-08-13  Andras Varga
+
+        * cIniFile::readFile()'s include file handling modified. Now the
+	included file doesn't need to start with a section header line:
+	entries will use the current section header in the including file.
+	BUT: section headers in the included file are not propagated back
+	to the including file because it could lead to nasty behaviour.
+
+1999-06-21  Andras Varga
+
+        * all sources checked in under CVS
+
+        * makefile.in modified for use with GNU Autoconf; also renamed to
+	Makefile.in
+
+        * version.log renamed to ChangeLog
+
+        * removed support for DOS with BC3.1
+
+1999-02-09  Andras Varga
+
+        * updated for sim174
+
+1999-01-25  Andras Varga
+
+        * updated for sim172d
+
+1998-12-27  Andras Varga
+
+        * fixed bug in inifile reader
+
+        * DYNAMIC_LINKAGE config flag renamed to USE_DLOPEN
+
+        * makefile renamed to makefile.in
+
+        * runningModule() corrected to contextModule in slaveapp.cc
+
+1998-08-17  Andras Varga
+
+        * fixed a bug with output vector config
+
+1998-08-17  Andras Varga
+
+        * fixed a bug with output vector config
+
+1998-08-14  Andras Varga
+
+        * makefile fix
+
+1998-08-12  Andras Varga
+
+        * Borland C++ 5.0 project file added
+
+        * cenvir.h move to sim/
+
+        * small fixes
+
+1998-07-24  Andras Varga
+
+        * getDisplayString() added to cEnvir and TOmnetApp classes
+
+        * display strings now can be taken from [DisplayStrings] or [Run
+	nn] section of the ini file (hardcoded display strings take
+	precendence over the ones in the ini file)
+
+        * cIniFile edited -- getRaw() added
+
+1998-07-20  Andras Varga
+
+	Improved cIniFile: wildcards understood in keys; keys may contain
+	whitespace Support for output vector configuration from ini file
+
+        * getOutVectorConfig() added to cEnvir and TOmnetApp classes
+
+        * output vector config is taken from [OutVectors] or [Run nn] section.
+	
+	  Syntax:
+	    module.vectorname.enabled=yes/no
+	    module.vectorname.interval=10s..30s
+	  Output vectors are enabled by default.
+
+1998-07-15  Andras Varga
+
+        * small fixes
+
+1998-07-10  Andras Varga
+
+        * main stack size increased to 64K
+
+        * new ini file option: [General]/load-libs=
+
+1998-06-24  Andras Varga
+
+        * modifications to cinifile.cc
+
+        * return value of TOmnetApp::askYesNo changed from bool to int
+	(-1==cancel)
+
+        * other small fixes
+
+1998-06-19  Andras Varga
+
+        * call to simulation.setup() added to TOmnetApp.setup()
+
+1998-06-18  Andras Varga
+
+        * opt_inifile_name bug fixed
+
+1998-06-09  Andras Varga
+
+        * new ini file option: output-scalar-file= (in [General] or
+	[Run-nn] section)
+	(supported from sim162 up)
+
+1998-05-20  Andras Varga
+
+        * `ev << ..' conversions for doubles changed
+
+1998-05-12  Andras Varga
+
+        * bugfixes
+
+1998-05-11  Andras Varga
+
+        * multiple -f and -l options: several ini files and libraries can
+	be loaded
+	(If you want to do several simulation runs with their parameters
+	in separate files, multiple -f will be very useful!)
+
+        * ini files can include each other. Syntax:
+	    ...
+	    include second.ini
+	    ...
+
+        * wildcard parameters in ini files. Like:
+	    [Parameters]
+	    net.station[*].gen_rate=100
+	  Wildcard characters are: * ?, and {} for range (using the conventional
+	  [] would be very inconvenient because they would interfere with vector
+	  indices).
+
+1998-04-27  Andras Varga
+
+        * new ini file option: [General] / total-stack-kb= Holds the total
+	stack size (in KB) needed by module coroutines.
+
+        * makefile can now create shared object (libenvir.so)
+
+        * support for dynamic loading of libraries: -l command line
+	option.  `foo -l ./token.so' (if `foo' is an OMNeT++ executable)
+	will now load the token.so file at startup.
+
+1998-03-26  Andras Varga
+
+        * use of gets() eliminated
+
+1998-02-15  Andras Varga
+
+        * makefile made compatible with configure script;
+	envir.a-->libenvir.a
+
+1997-12-13  Andras Varga
+
+        * for clarity, section name [All runs] changed to [Parameters]
+
+1997-10-10  Andras Varga
+
+        * added endl to cenvir.h. Example: ev << "Hello!" << endl;
+
+1997-10-06  Andras Varga
+
+        * further renaming; compatible with sim148
+
+1997-10-02  Andras Varga
+
+        * cleaned up & renamed several member functions; compatible with sim147
+
+1997-08-17  Andras Varga
+
+        * small bug in ini file reader fixed
+
+        * readPerRunOptions(1) in TOmnetApp::setup() commented out
+
+1997-08-17  Andras Varga
+
+        * TOTAL_STACK increased to 2Mb
+
+        * extrastack() support added
+
+        * new ini file entry: [General]/netif-check-freq=  (default:1)
+
+        * compatibility: sim146a
+
+1997-08-08  Andras Varga
+
+        * other [Slaves] options added that control whether different kinds of
+	
+	  textual messages should be routed to the console:
+	     errmsgs-to-console=
+	     infomsgs-to-console=
+	     modmsgs-to-console=
+
+        * updated for sim144c
+
+1997-08-07  Andras Varga
+
+        * omnetapp.cc: cNetSimpleMod corrected to cNetMod
+
+        * compatibility: sim144a or later
+
+1997-08-04  Andras Varga
+
+        * fixed a bug with reporting how many rnd gens were initialized from table
+
+        * [Slaves]/module-messages= flag added; works similarly to
+	Cmdenv's.  Default value is NO: module messages from slaves do not
+	appear on console.
+
+1997-07-31  Andras Varga
+
+        * a bug introduced in #96 fixed
+
+        * [General]/number-of-runs= ini file setting was removed; its
+	place is taken by [Cmdenv]/runs-to-execute=
+
+        * added: cInifileSectionIterator
+
+        * compatible with: cmdenv87 and up
+
+1997-07-20  Andras Varga
+
+	Ini file reader improved; '#' as well as ';' can be used for
+	comments Improvements on distributed execution:
+
+        * ini file options added to enable logging of messages produced by
+	slaves:
+	
+	     [Slaves]
+	     write-slavelog = true/false
+	     slavelog-file = slave.log
+	  Output between TSlaveApp creation and ini file processing is written in
+	  the file "slave.log".
+
+        * changed TOmnetApp::foreignputs()
+
+1997-07-10  Andras Varga
+
+        * makefile hacked upon to make it edible for Cygnus gcc
+
+1997-07-06  Andras Varga
+
+        * fixed a bug that caused segmentation fault if there was an error
+	during system setup
+
+1997-07-01  Andras Varga
+
+        * printing tons of "genXX-seed=..." ini warnings suppressed
+
+        * handling of boolean ini file entries improved
+
+1997-06-27  Andras Varga
+
+        * enable_modmsgs changed to disable_tracing
+
+        * main stack enlarged from 16K to 32K (cenvir.cc)
+
+1997-06-26  Andras Varga
+
+        * enable_modmsgs flag added. If set to FALSE, makes ev.printf()
+	and ev.puts() return immediately without doing anything.
+	Motivation was to decrease overhead when running the simulation at
+	full speed and module messages are not needed.
+
+1997-04-22  Andras Varga
+
+        * stepmode renamed to pause_in_sendmsg (compatibility: sim130 and above)
+
+1997-04-11  Andras Varga
+
+        * opt_helponly stuff (-h command-line option) moved to cmdenv package
+
+1997-04-06  Andras Varga
+
+        * cEnvir::messagedelivered() added
+
+        * STARTUPERROR_MODE stuff added
+
+        * compatible with: sim127
+
+1997-04-01  Andras Varga
+
+        * fmt of ini file warnings changed
+
+1997-03-24  Andras Varga
+
+        * file logging added to TSlaveApp ("slaveapp.log")
+
+        * bugfixes
+
+1997-03-21  Andras Varga
+
+        * changes on PVM stuff. *** COMPATIBLE WITH SIM122 OR UP ***
+
+	'-s' flag replaced with call to is_started_as_master() more error
+	checks
+
+        * copyright msg modified
+
+1997-03-16  Andras Varga
+
+        * Style of ini file [Machines] section changed from:
+	
+	    whale.hit.bme.hu = node1, node2
+	    dolphin.hit.bme.hu = node3
+	  to:
+	    node1 = whale.hit.bme.hu
+	    node2 = whale.hit.bme.hu
+	    node3 = dolphin.hit.bme.hu
+
+1997-03-15  Andras Varga
+
+        * pvm stuff (cSlaveApp) modified
+
+1997-03-10  Andras Varga
+
+        * small modifications
+
+1997-03-08  Andras Varga
+
+1997-03-06  Andras Varga
+
+        * gen1_seed=, gen2_seed= etc entries finished;
+
+        * starting_seeds table added
+
+        * TOmnetApp::setOptions() renamed to makeOptionsEffective()
+
+1997-03-06  Andras Varga
+
+        * new cInifile members: getAs..2()
+
+        * better ini file warnings
+
+        * gen1_seed=, gen2_seed= etc entries added; not complete
+
+1997-02-28  Andras Varga
+
+        * adopted to sim105 & 'multiple runs' bug fixed
+
+        * ini file warning changed from ev.printfmsg() to ev.printf()
+
+1996-12-01  Andras Varga
+
+         * fixed linker problem (undefined symbol
+	 `TSlaveApp::TSlaveApp(...)'
+
+         * changed copyright message
